--- a/static/style/syntax-highlighting.scss
+++ b/static/style/syntax-highlighting.scss
@@ -8,8 +8,9 @@ pre.language-kt {
 	border: .25rem solid lighten($code-block-bg, 10%);
 	border-radius: 1rem;
 	background: $code-block-bg;
-	font-family: jetbrains-mono, "Consolas", "Fira Code", monospace;
 	color: $code-color;
+	font-family: jetbrains-mono, "Consolas", "Fira Code", monospace;
+	overflow: auto;
 }
 
 code.language-kt {
